# buildkite-ls

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  install.sh  main.go
.buildkite/: pipeline.yml
.claude/: settings.local.json
.github/workflows/: release.yml
.mason/: buildkite-ls.lua
cmd/buildkite-ls/: main.go
examples/: pipeline.yml
internal/context/: analyzer.go  analyzer_test.go
internal/lsp/: code_actions_test.go  completion.go  completion_test.go  definition_test.go  diagnostics_test.go  documents.go  documents_test.go  semantic_tokens_test.go  server.go  server_test.go  signature_help_test.go
internal/parser/: pipeline.go  pipeline_test.go
internal/plugins/: parser_test.go  registry.go  registry_test.go
internal/schema/: loader.go  loader_test.go
src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  parser.rs  schema.rs  server.rs
