[package]
name = "buildkite-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
serde_yaml = "0.9"
serde_json = "1.0"
jsonschema = { version = "0.17", default-features = false, features = ["draft202012"] }
regex = "1.10"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
dashmap = "5.5"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "io-util", "time"] }
