[package]
name = "buildkite-ls"
version = "0.1.0"
edition = "2021"
description = "Language Server for Buildkite pipeline files"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tower-lsp = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
thiserror = "1.0"
url = "2.3"
futile = "0.4"  # Optional utility for YAML parsing

[lib]
name = "buildkite_ls"
path = "src/lib.rs"

[[bin]]
name = "buildkite-ls"
path = "src/main.rs"